// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Raw 워크북 골든 스냅샷 — 응답 행만 있는 기본 경로 > buildSplitWorkbook 의 모든 시트 셀 행렬과 병합 범위가 스냅샷과 같다 1`] = `
[
  {
    "merges": [],
    "name": "응답 내역",
    "values": [
      ,
      [
        ,
        "시스템ID",
        "순번",
        "접속 단말",
        "브라우저",
        "상태",
        "시작일시",
        "종료일시",
        "소요시간",
      ],
      [
        ,
        7,
        1,
        "PC",
        "Chrome",
        "완료",
        "2026-07-01 09:00",
        "2026-07-01 09:10",
        "10분",
      ],
      [
        ,
        3,
        2,
        "모바일",
        "Safari",
        "진행중",
        "2026-07-02 12:30",
        "",
        "진행 중",
      ],
      [
        ,
        "",
        3,
        "태블릿",
        "Other",
        "이탈",
        "2026-07-03 21:00",
        "",
        "1분",
      ],
    ],
  },
  {
    "merges": [
      "A1:A3",
      "B1:B3",
      "C1:C3",
      "D1:D3",
      "E1:E3",
      "F1:F3",
      "G1:G3",
      "H1:H3",
      "I1:I3",
      "J1:J3",
    ],
    "name": "공통",
    "values": [
      ,
      [
        ,
        "IP 해시",
        "시스템ID",
        "순번",
        "개별 URL",
        "상태",
        "마지막 입력 문항",
        "시작일시",
        "종료일시",
        "소요시간",
        "접속 단말",
        "Q1. 성별",
        "문3. 매출액",
      ],
      [
        ,
        "IP 해시",
        "시스템ID",
        "순번",
        "개별 URL",
        "상태",
        "마지막 입력 문항",
        "시작일시",
        "종료일시",
        "소요시간",
        "접속 단말",
        "",
        "Q3_2020년 매출액_기업 전체",
      ],
      [
        ,
        "IP 해시",
        "시스템ID",
        "순번",
        "개별 URL",
        "상태",
        "마지막 입력 문항",
        "시작일시",
        "종료일시",
        "소요시간",
        "접속 단말",
        "Q1",
        "Q3_u00_2020",
      ],
      [
        ,
        "0123456789abcdef",
        7,
        1,
        "https://app.example.com/i/abc123defg",
        "완료",
        "Q3",
        "2026-07-01 09:00",
        "2026-07-01 09:10",
        "10분",
        "PC",
        1,
      ],
      [
        ,
        "fedcba9876543210",
        3,
        2,
        "https://app.example.com/i/zzz999yyy8",
        "진행중",
        "Q1",
        "2026-07-02 12:30",
        "",
        "진행 중",
        "모바일",
        2,
      ],
      [
        ,
        "",
        "",
        3,
        "",
        "이탈",
        "Q1",
        "2026-07-03 21:00",
        "",
        "1분",
        "태블릿",
        1,
      ],
    ],
  },
  {
    "merges": [
      "A1:A3",
      "B1:B3",
      "C1:C3",
      "D1:D3",
      "E1:E3",
      "F1:F3",
      "G1:G3",
      "H1:H3",
      "I1:I3",
      "J1:J3",
      "K1:L1",
    ],
    "name": "남성",
    "values": [
      ,
      [
        ,
        "IP 해시",
        "시스템ID",
        "순번",
        "개별 URL",
        "상태",
        "마지막 입력 문항",
        "시작일시",
        "종료일시",
        "소요시간",
        "접속 단말",
        "Q2. 관심분야",
        "Q2. 관심분야",
      ],
      [
        ,
        "IP 해시",
        "시스템ID",
        "순번",
        "개별 URL",
        "상태",
        "마지막 입력 문항",
        "시작일시",
        "종료일시",
        "소요시간",
        "접속 단말",
        "AI",
        "ML",
      ],
      [
        ,
        "IP 해시",
        "시스템ID",
        "순번",
        "개별 URL",
        "상태",
        "마지막 입력 문항",
        "시작일시",
        "종료일시",
        "소요시간",
        "접속 단말",
        "Q2_1",
        "Q2_2",
      ],
      [
        ,
        "0123456789abcdef",
        7,
        1,
        "https://app.example.com/i/abc123defg",
        "완료",
        "Q3",
        "2026-07-01 09:00",
        "2026-07-01 09:10",
        "10분",
        "PC",
        1,
        2,
      ],
      [
        ,
        "fedcba9876543210",
        3,
        2,
        "https://app.example.com/i/zzz999yyy8",
        "진행중",
        "Q1",
        "2026-07-02 12:30",
        "",
        "진행 중",
        "모바일",
      ],
      [
        ,
        "",
        "",
        3,
        "",
        "이탈",
        "Q1",
        "2026-07-03 21:00",
        "",
        "1분",
        "태블릿",
      ],
    ],
  },
  {
    "merges": [],
    "name": "코딩북",
    "values": [
      ,
      [
        ,
        "변수번호",
        "SPSS 변수명",
        "질문 제목",
        "셀라벨",
        "값 라벨",
        "변수 유형",
        "측정 수준",
        "표시 형식",
        "다중응답 세트",
      ],
      [
        ,
        1,
        "Q1",
        "Q1. 성별",
        "",
        "1=남성, 2=여성",
        "Numeric",
        "Nominal",
        "F8.0",
        "",
      ],
      [
        ,
        2,
        "Q2_1",
        "Q2. 관심분야",
        "",
        "빈값=비선택, 1=선택",
        "Numeric",
        "Nominal",
        "F8.0",
        "$Q2",
      ],
      [
        ,
        3,
        "Q2_2",
        "Q2. 관심분야",
        "",
        "빈값=비선택, 2=선택",
        "Numeric",
        "Nominal",
        "F8.0",
        "$Q2",
      ],
      [
        ,
        4,
        "Q3_u00_2020",
        "문3. 매출액",
        "Q3_2020년 매출액_기업 전체",
        "",
        "String",
        "Nominal",
        "A(가변)",
        "",
      ],
    ],
  },
]
`;

exports[`Raw 워크북 골든 스냅샷 — 응답 행만 있는 기본 경로 > generateRawDataWorkbook 의 모든 시트 셀 행렬과 병합 범위가 스냅샷과 같다 1`] = `
[
  {
    "merges": [],
    "name": "응답 내역",
    "values": [
      ,
      [
        ,
        "시스템ID",
        "순번",
        "접속 단말",
        "브라우저",
        "상태",
        "시작일시",
        "종료일시",
        "소요시간",
      ],
      [
        ,
        7,
        1,
        "PC",
        "Chrome",
        "완료",
        "2026-07-01 09:00",
        "2026-07-01 09:10",
        "10분",
      ],
      [
        ,
        3,
        2,
        "모바일",
        "Safari",
        "진행중",
        "2026-07-02 12:30",
        "",
        "진행 중",
      ],
      [
        ,
        "",
        3,
        "태블릿",
        "Other",
        "이탈",
        "2026-07-03 21:00",
        "",
        "1분",
      ],
    ],
  },
  {
    "merges": [
      "A1:A3",
      "B1:B3",
      "C1:C3",
      "D1:D3",
      "E1:E3",
      "F1:F3",
      "G1:G3",
      "H1:H3",
      "I1:I3",
      "J1:J3",
      "L1:M1",
    ],
    "name": "Raw Data",
    "values": [
      ,
      [
        ,
        "IP 해시",
        "시스템ID",
        "순번",
        "개별 URL",
        "상태",
        "마지막 입력 문항",
        "시작일시",
        "종료일시",
        "소요시간",
        "접속 단말",
        "Q1. 성별",
        "Q2. 관심분야",
        "Q2. 관심분야",
        "문3. 매출액",
      ],
      [
        ,
        "IP 해시",
        "시스템ID",
        "순번",
        "개별 URL",
        "상태",
        "마지막 입력 문항",
        "시작일시",
        "종료일시",
        "소요시간",
        "접속 단말",
        "",
        "AI",
        "ML",
        "Q3_2020년 매출액_기업 전체",
      ],
      [
        ,
        "IP 해시",
        "시스템ID",
        "순번",
        "개별 URL",
        "상태",
        "마지막 입력 문항",
        "시작일시",
        "종료일시",
        "소요시간",
        "접속 단말",
        "Q1",
        "Q2_1",
        "Q2_2",
        "Q3_u00_2020",
      ],
      [
        ,
        "0123456789abcdef",
        7,
        1,
        "https://app.example.com/i/abc123defg",
        "완료",
        "Q3",
        "2026-07-01 09:00",
        "2026-07-01 09:10",
        "10분",
        "PC",
        1,
        1,
        2,
      ],
      [
        ,
        "fedcba9876543210",
        3,
        2,
        "https://app.example.com/i/zzz999yyy8",
        "진행중",
        "Q1",
        "2026-07-02 12:30",
        "",
        "진행 중",
        "모바일",
        2,
      ],
      [
        ,
        "",
        "",
        3,
        "",
        "이탈",
        "Q1",
        "2026-07-03 21:00",
        "",
        "1분",
        "태블릿",
        1,
      ],
    ],
  },
  {
    "merges": [],
    "name": "코딩북",
    "values": [
      ,
      [
        ,
        "변수번호",
        "SPSS 변수명",
        "질문 제목",
        "셀라벨",
        "값 라벨",
        "변수 유형",
        "측정 수준",
        "표시 형식",
        "다중응답 세트",
      ],
      [
        ,
        1,
        "Q1",
        "Q1. 성별",
        "",
        "1=남성, 2=여성",
        "Numeric",
        "Nominal",
        "F8.0",
        "",
      ],
      [
        ,
        2,
        "Q2_1",
        "Q2. 관심분야",
        "",
        "빈값=비선택, 1=선택",
        "Numeric",
        "Nominal",
        "F8.0",
        "$Q2",
      ],
      [
        ,
        3,
        "Q2_2",
        "Q2. 관심분야",
        "",
        "빈값=비선택, 2=선택",
        "Numeric",
        "Nominal",
        "F8.0",
        "$Q2",
      ],
      [
        ,
        4,
        "Q3_u00_2020",
        "문3. 매출액",
        "Q3_2020년 매출액_기업 전체",
        "",
        "String",
        "Nominal",
        "A(가변)",
        "",
      ],
    ],
  },
]
`;
